finished html and all initial styling

--- a/index.html
+++ b/index.html
@@ -334,13 +334,13 @@
                             <div class="blogIcons">
                                 <ul>
                                     <li>
-                                        <a href="#" class="bIcon bFacebook"><i class="fab fa-facebook-f fa-fw"></i></a>
+                                        <a href="#" class="bIcon sFacebook"><i class="fab fa-facebook-f fa-fw"></i></a>
                                     </li>
                                     <li>
-                                        <a href="#" class="bIcon bTwitter"><i class="fab fa-twitter fa-fw"></i></a>
+                                        <a href="#" class="bIcon sTwitter"><i class="fab fa-twitter fa-fw"></i></a>
                                     </li>
                                     <li>
-                                        <a href="#" class="bIcon bGoogle"><i class="fab fa-google-plus-g fa-fw"></i></a>
+                                        <a href="#" class="bIcon sGoogle"><i class="fab fa-google-plus-g fa-fw"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -358,13 +358,13 @@
                                 <div class="blogIcons">
                                     <ul>
                                         <li>
-                                            <a href="#" class="bIcon bFacebook"><i class="fab fa-facebook-f fa-fw"></i></a>
+                                            <a href="#" class="bIcon sFacebook"><i class="fab fa-facebook-f fa-fw"></i></a>
                                         </li>
                                         <li>
-                                            <a href="#" class="bIcon bTwitter"><i class="fab fa-twitter fa-fw"></i></a>
+                                            <a href="#" class="bIcon sTwitter"><i class="fab fa-twitter fa-fw"></i></a>
                                         </li>
                                         <li>
-                                            <a href="#" class="bIcon bGoogle"><i class="fab fa-google-plus-g fa-fw"></i></a>
+                                            <a href="#" class="bIcon sGoogle"><i class="fab fa-google-plus-g fa-fw"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -381,13 +381,13 @@
                                 <div class="blogIcons">
                                     <ul>
                                         <li>
-                                            <a href="#" class="bIcon bFacebook"><i class="fab fa-facebook-f fa-fw"></i></a>
+                                            <a href="#" class="bIcon sFacebook"><i class="fab fa-facebook-f fa-fw"></i></a>
                                         </li>
                                         <li>
-                                            <a href="#" class="bIcon bTwitter"><i class="fab fa-twitter fa-fw"></i></a>
+                                            <a href="#" class="bIcon sTwitter"><i class="fab fa-twitter fa-fw"></i></a>
                                         </li>
                                         <li>
-                                            <a href="#" class="bIcon bGoogle"><i class="fab fa-google-plus-g fa-fw"></i></a>
+                                            <a href="#" class="bIcon sGoogle"><i class="fab fa-google-plus-g fa-fw"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -400,6 +400,8 @@
                 </div>
             </div> <!-- main wrapper -->
         </section>
+        <!-- BLOG SECTION ENDS -->
+        <!-- LOCATION SECTION BEGINS -->
         <section class="location">
             <div class="sectionTop">
                 <div class="wrapper">
@@ -409,18 +411,113 @@
                 </div>
             </div>
             <div class="sectionBottom">
-                <img src="images/map.png" alt="">
+                <img src="images/map.png" alt="picture of the map location of simpleflex">
             </div>
         </section>
+        <!-- LOCATION SECTION ENDS -->
+        <!-- CONTACT SECTION BEGINS -->
         <section id="contact">
-            <div class="wrapper"></div>
+            <div class="wrapper">
+                <h2>Get in touch</h2>
+                <p class="desc">Feel free to contact us at any time, nam liber tempor cum soluta nobis eleifend option congue nihil.</p>
+                <div class="socialIconsBottom">
+                    <ul>
+                        <li class="sIcon">
+                            <a href="#" class="sFacebook"><i class="fab fa-facebook-f fa-fw"></i></a>
+                        </li>
+                        <li class="sIcon">
+                            <a href="#" class="sTwitter"><i class="fab fa-twitter fa-fw"></i></a>
+                        </li>
+                        <li class="sIcon">
+                            <a href="#" class="sFlickr"><i class="fab fa-flickr fa-fw"></i></a>
+                        </li>
+                        <li class="sIcon">
+                            <a href="#" class="sGoogle"><i class="fab fa-google-plus-g fa-fw"></i></a>
+                        </li>
+                        <li class="sIcon">
+                            <a href="#" class="sLinkdin"><i class="fab fa-linkedin-in fa-fw"></i></a>
+                        </li>
+                        <li class="sIcon">
+                            <a href="#" class="sDribble"><i class="fab fa-dribbble fa-fw"></i></a>
+                        </li>
+                        <li class="sIcon">
+                            <a href="#" class="sPinterest"><i class="fab fa-pinterest-p fa-fw"></i></a>
+                        </li>
+                    </ul>
+                </div> 
+                <form action="#" method="POST" name="contactForm">
+                    <label for="name" class="visuallyhidden">Name</label>
+                    <input type="text" id="name" placeholder="Name">
+                    <label for="email" class="visuallyhidden">Email</label>
+                    <input type="email" id="email" placeholder="Email">
+                    <label for="message" class="visuallyhidden">Write Message here</label>
+                    <textarea name="contactMessage" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+                    <label for="submit" class="visuallyhidden">Click to send message</label>
+                    <input type="submit" id="submit" value="Send" class="buttonWhite">
+                </form>
+            </div> <!-- wrapper -->
         </section>
+        <!-- CONTACT SECTION ENDS -->
     </main>
+    <!-- MAIN SECTION ENDS -->
+    <!-- FOOTER BEGINS -->
     <footer>
-        <div class="wrapper">
-            <div class="footerTop"></div>
-            <div class="footerCopy"></div>
+        <div class="footerTop">
+           <div class="wrapper footerContainer">
+               <div class="footerFourth">
+                   <h4>Text Widget</h4>
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem minima alias iste nostrum totam laboriosam tempora eum dolorum possimus atque neque, veniam repellat quo pariatur quia vel error assumenda sit!</p>
+               </div>
+               <div class="footerFourth">
+                   <h4>Recent posts</h4>
+                   <div class="postPreview">
+                       <div class="imgholder">
+                           <img src="images/footer-1.png" alt="photo of street graffiti">
+                       </div>
+                       <div class="postDesc">
+                           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                           <p class="postDate">Dec 31, 2013</p>
+                       </div>
+                   </div>
+                   <div class="postPreview">
+                       <div class="imgholder">
+                           <img src="images/footer-2.png" alt="photo of street art words">
+                       </div>
+                       <div class="postDesc">
+                           <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                           <p class="postDate">Dec 18, 2013</p>
+                       </div>
+                   </div>
+                   <div class="postPreview">
+                       <div class="imgholder">
+                           <img src="images/footer-3.png" alt="picture of mosaic tiles">
+                       </div>
+                       <div class="postDesc">
+                           <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                           <p class="postDate">Nov 29, 2013</p>
+                       </div>
+                   </div>
+               </div> <!-- second footerFourth -->
+               <div class="footerFourth">
+                   <h4>Our Newsletter</h4>
+                   <p>Please subscribe to our latest newsletter to be updated!</p>
+                   <form action="#" method="POST" name="newsletterEmail">
+                       <label for="email" class="visuallyhidden">Enter email</label>
+                       <input type="email" id="email" class="newletterEmail">
+                       <label for="submit" class="visuallyhidden">Subscribe</label>
+                       <input type="submit" id="submit" class="redButton" value="SEND">
+                   </form>
+               </div>
+               <div class="footerFourth">
+                   <h4>Flickr Widget</h4>
+                   <img src="images/footer-4.png" alt="grid of 6 photos of white canvases with various light paintings">
+               </div>
+           </div> <!-- wrapper --> 
+        </div>
+        <div class="footerCopy">
+            <p>&copy; Copyright 2014. Simpleflex Template by  <span><a href="#">DX Templates</a></span></p>
         </div>
     </footer>
+    <!-- FOOTER ENDS -->
 </body>
 </html>
