responsive design for large screen done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#blog">Blog</a></li>
-                    <li><a href="#contact" class="lastA">Contact</a></li>
+                    <li class="lastA"><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -147,57 +147,65 @@
                     <div class="teamMember">
                         <img src="images/headshot-1.png" alt="photo of team member 1">
                         <div class="socialIcons">
-                            <div class="icon facebook">
-                                <i class="fab fa-facebook-f fa-fw"></i>
-                            </div>
-                            <div class="icon icon2 twitter">
-                                <i class="fab fa-twitter fa-fw"></i>
-                            </div>
-                            <div class="icon pinterest">
-                                <i class="fab fa-pinterest-p fa-fw"></i>
-                            </div>
+                            <ul>
+                                <li class="sIcon">
+                                    <a href="#" class="sFacebook" aria-label="visit Facebook"><i class="fab fa-facebook-f fa-fw"></i></a>
+                                </li>
+                                <li class="sIcon">
+                                    <a href="#" class="sTwitter" aria-label="visit Twitter"><i class="fab fa-twitter fa-fw"></i></a>
+                                </li>
+                                <li class="sIcon">
+                                    <a href="#" class="sPinterest" aria-label="visit Pinterest"><i class="fab fa-pinterest-p fa-fw"></i></a>
+                                </li>
+                            </ul>
                         </div>
-                    </div>
+                    </div> <!-- team member1 end -->
                     <div class="teamMember">
                         <img src="images/headshot-2.png" alt="photo of team member 2">
                         <div class="socialIcons">
-                            <div class="icon facebook">
-                                <i class="fab fa-facebook-f fa-fw"></i>
-                            </div>
-                            <div class="icon icon2 dribble">
-                                <i class="fab fa-dribbble fa-fw"></i>
-                            </div>
-                            <div class="icon pinterest">
-                                <i class="fab fa-pinterest-p fa-fw"></i>
-                            </div>
+                            <ul>
+                                <li class="sIcon">
+                                    <a href="#" class="sFacebook" aria-label="visit Facebook"><i class="fab fa-facebook-f fa-fw"></i></a>
+                                </li>
+                                <li class="sIcon">
+                                    <a href="#" class="sDribble" aria-label="visit Dribble"><i class="fab fa-dribbble fa-fw"></i></a>
+                                </li>
+                                <li class="sIcon">
+                                    <a href="#" class="sPinterest" aria-label="visit Pinterest"><i class="fab fa-pinterest-p fa-fw"></i></a>
+                                </li>
+                            </ul>
                         </div>
-                    </div>
+                    </div> <!-- team member 2 end -->
                     <div class="teamMember">
                         <img src="images/headshot-3.png" alt="photo of team member 3">
                         <div class="socialIcons">
-                            <div class="icon facebook">
-                                <i class="fab fa-facebook-f fa-fw"></i>
-                            </div>
-                            <div class="icon icon2 twitter">
-                                <i class="fab fa-twitter fa-fw"></i>
-                            </div>
-                            <div class="icon flickr">
-                                <i class="fab fa-flickr fa-fw"></i>
-                            </div>
+                            <ul>
+                                <li class="sIcon">
+                                    <a href="#" class="sFacebook" aria-label="visit Facebook"><i class="fab fa-facebook-f fa-fw"></i></a>
+                                </li>
+                                <li class="sIcon">
+                                    <a href="#" class="sTwitter" aria-label="visit Twitter"><i class="fab fa-twitter fa-fw"></i></a>
+                                </li>
+                                <li class="sIcon">
+                                    <a href="#" class="sFlickr" aria-label="visit Flickr"><i class="fab fa-flickr fa-fw"></i></a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                     <div class="teamMember">
                         <img src="images/headshot-4.png" alt="photo of team member 4">
                         <div class="socialIcons">
-                            <div class="icon twitter">
-                                <i class="fab fa-twitter fa-fw"></i>
-                            </div>
-                            <div class="icon icon2 google">
-                                <i class="fab fa-google-plus-g fa-fw"></i>
-                            </div>
-                            <div class="icon linkdin">
-                                <i class="fab fa-linkedin-in fa-fw"></i>
-                            </div>
+                            <ul>
+                                <li class="sIcon">
+                                    <a href="#" class="sTwitter" aria-label="visit Twitter"><i class="fab fa-twitter fa-fw"></i></a>
+                                </li>
+                                <li class="sIcon">
+                                    <a href="#" class="sGoogle" aria-label="Visit google"><i class="fab fa-google-plus-g fa-fw"></i></a>
+                                </li>
+                                <li class="sIcon">
+                                    <a href="#" class="sLinkdin" aria-label="visit LinkdIn"><i class="fab fa-linkedin-in fa-fw"></i></a>
+                                </li>
+                            </ul>
                         </div>
                     </div> <!-- team member container -->
                 </div> <!-- cards container -->
@@ -331,16 +339,16 @@
                             <h4>post with image</h4>
                             <h5>Dec 29, 2013</h5>
                             <p class="descBlog">At vero eos et accusam et justo duo dolores et ea rebum quis aute iure reprehenderit in voluptate velit esse cillum...</p>
-                            <div class="blogIcons">
+                            <div class="socialIcons">
                                 <ul>
-                                    <li>
-                                        <a href="#" class="bIcon sFacebook"><i class="fab fa-facebook-f fa-fw"></i></a>
+                                    <li class="sIcon">
+                                        <a href="#" class="sFacebook" aria-label="visit Facebook"><i class="fab fa-facebook-f fa-fw"></i></a>
                                     </li>
-                                    <li>
-                                        <a href="#" class="bIcon sTwitter"><i class="fab fa-twitter fa-fw"></i></a>
+                                    <li class="sIcon">
+                                        <a href="#" class="sTwitter" aria-label="visit Twitter"><i class="fab fa-twitter fa-fw"></i></a>
                                     </li>
-                                    <li>
-                                        <a href="#" class="bIcon sGoogle"><i class="fab fa-google-plus-g fa-fw"></i></a>
+                                    <li class="sIcon">
+                                        <a href="#" class="sGoogle" aria-label="visit Google"><i class="fab fa-google-plus-g fa-fw"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -355,16 +363,16 @@
                                 <h4>post with video</h4>
                                 <h5>Dec 29, 2013</h5>
                                 <p class="descBlog">At vero eos et accusam et justo duo dolores et ea rebum quis aute...</p>
-                                <div class="blogIcons">
+                                <div class="socialIcons">
                                     <ul>
-                                        <li>
-                                            <a href="#" class="bIcon sFacebook"><i class="fab fa-facebook-f fa-fw"></i></a>
+                                        <li class="sIcon">
+                                            <a href="#" class="sFacebook" aria-label="vist Facebook"><i class="fab fa-facebook-f fa-fw"></i></a>
                                         </li>
-                                        <li>
-                                            <a href="#" class="bIcon sTwitter"><i class="fab fa-twitter fa-fw"></i></a>
+                                        <li class="sIcon">
+                                            <a href="#" class="sTwitter" aria-label="visit Twitter"><i class="fab fa-twitter fa-fw"></i></a>
                                         </li>
-                                        <li>
-                                            <a href="#" class="bIcon sGoogle"><i class="fab fa-google-plus-g fa-fw"></i></a>
+                                        <li class="sIcon">
+                                            <a href="#" class="sGoogle" aria-label="visit Google"><i class="fab fa-google-plus-g fa-fw"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -378,19 +386,19 @@
                                 <h4>post with slider</h4>
                                 <h5>Dec 29, 2013</h5>
                                 <p class="descBlog">Accusam et justo duo dolores et ea rebum quis aute iure reprehenderit in voluptate velit esse cillum...</p>
-                                <div class="blogIcons">
+                                <div class="socialIcons">
                                     <ul>
-                                        <li>
-                                            <a href="#" class="bIcon sFacebook"><i class="fab fa-facebook-f fa-fw"></i></a>
+                                        <li class="sIcon">
+                                            <a href="#" class="sFacebook" aria-label="visit Facebook"><i class="fab fa-facebook-f fa-fw"></i></a>
                                         </li>
-                                        <li>
-                                            <a href="#" class="bIcon sTwitter"><i class="fab fa-twitter fa-fw"></i></a>
+                                        <li class="sIcon">
+                                            <a href="#" class="sTwitter" aria-label="visit Twitter"><i class="fab fa-twitter fa-fw"></i></a>
                                         </li>
-                                        <li>
-                                            <a href="#" class="bIcon sGoogle"><i class="fab fa-google-plus-g fa-fw"></i></a>
+                                        <li class="sIcon">
+                                            <a href="#" class="sGoogle" aria-label="visit Google"><i class="fab fa-google-plus-g fa-fw"></i></a>
                                         </li>
                                     </ul>
-                                </div>
+                                </div> 
                             </div>
                         </div> <!-- bottom right finishes -->
                     </div> <!-- right side wrapper -->
@@ -420,28 +428,28 @@
             <div class="wrapper">
                 <h2>Get in touch</h2>
                 <p class="desc">Feel free to contact us at any time, nam liber tempor cum soluta nobis eleifend option congue nihil.</p>
-                <div class="socialIconsBottom">
+                <div class="socialIcons">
                     <ul>
                         <li class="sIcon">
-                            <a href="#" class="sFacebook"><i class="fab fa-facebook-f fa-fw"></i></a>
+                            <a href="#" class="sFacebook" aria-label="visit Facebook"><i class="fab fa-facebook-f fa-fw"></i></a>
                         </li>
                         <li class="sIcon">
-                            <a href="#" class="sTwitter"><i class="fab fa-twitter fa-fw"></i></a>
+                            <a href="#" class="sTwitter" aria-label="visit twitter"><i class="fab fa-twitter fa-fw"></i></a>
                         </li>
                         <li class="sIcon">
-                            <a href="#" class="sFlickr"><i class="fab fa-flickr fa-fw"></i></a>
+                            <a href="#" class="sFlickr" aria-label="visit Flickr"><i class="fab fa-flickr fa-fw"></i></a>
                         </li>
                         <li class="sIcon">
-                            <a href="#" class="sGoogle"><i class="fab fa-google-plus-g fa-fw"></i></a>
+                            <a href="#" class="sGoogle" aria-label="visit Google"><i class="fab fa-google-plus-g fa-fw"></i></a>
                         </li>
                         <li class="sIcon">
-                            <a href="#" class="sLinkdin"><i class="fab fa-linkedin-in fa-fw"></i></a>
+                            <a href="#" class="sLinkdin" aria-label="visit LinkdIn"><i class="fab fa-linkedin-in fa-fw"></i></a>
                         </li>
                         <li class="sIcon">
-                            <a href="#" class="sDribble"><i class="fab fa-dribbble fa-fw"></i></a>
+                            <a href="#" class="sDribble" aria-label="visit Google"><i class="fab fa-dribbble fa-fw"></i></a>
                         </li>
                         <li class="sIcon">
-                            <a href="#" class="sPinterest"><i class="fab fa-pinterest-p fa-fw"></i></a>
+                            <a href="#" class="sPinterest" aria-label="visit Pinterest"><i class="fab fa-pinterest-p fa-fw"></i></a>
                         </li>
                     </ul>
                 </div> 
