--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                             <div class="description">
                                 <h4>post with slider</h4>
                                 <h5>Dec 29, 2013</h5>
-                                <p class="descBlog">Accusam et justo duo dolores et ea rebum quis aute iure reprehenderit in voluptate velit esse cillum...</p>
+                                <p class="descBlog">At vero eos et accusam et justo duo dolores et ea rebum quis aute...</p>
                                 <div class="socialIcons">
                                     <ul>
                                         <li class="sIcon">
