final product plus a couple details

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Simpleflex</title>
+    <link type="image/png" href="images/icon-simple.png" rel="icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700|Raleway:300,700" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <!-- DESIGN BY SIMPLEFLEX 2018 - CODE BY HANNAH CRUMP 2018 -->
 </head>
 <body>
     <!-- HEADER STARTS -->
@@ -41,6 +43,11 @@
                     <div class="homeImgContainer">
                         <img src="images/mockup-1.png" alt="drawing of a white iPhone with the Simpleflex about page displayed">
                     </div>
+                </div>
+                <div class="dotNav">
+                    <a href="#" class="dot dot1"></a>
+                    <a href="#" class="dot dot2"></a>
+                    <a href="#" class="dot dot3"></a>
                 </div>
             </div>
         </section>
